# ignite-CANIS

./: .gitignore  README.md  get_twitter_post_content.ipynb  pyproject.toml
data/: .gitignore  data.json
src/: scroller.py  twitter_scrape.py  word_counts.py
